// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Paper组件 快照测试 基本使用 1`] = `
<div
  className="Paper-t0j6j6-0 Papertest__PaperWrapper-sc-7j6t7q-0 XUzWm sinoui-paper"
>
  Paper Content
</div>
`;

exports[`Paper组件 快照测试 设置是否显示圆角 1`] = `
<div
  className="Paper-t0j6j6-0 Papertest__PaperWrapper-sc-7j6t7q-0 dCtEFp sinoui-paper"
>
  Paper Content
</div>
`;

exports[`Paper组件 快照测试 设置轮廓模式 1`] = `
<div
  className="Paper-t0j6j6-0 Papertest__PaperWrapper-sc-7j6t7q-0 fykTaV sinoui-paper"
>
  Paper Content
</div>
`;

exports[`Paper组件 快照测试 设置阴影高度 1`] = `
<div
  className="Paper-t0j6j6-0 Papertest__PaperWrapper-sc-7j6t7q-0 eNxCcV sinoui-paper"
  elevation={4}
>
  Paper Content
</div>
`;
